--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,19 @@ body {
     color: #655757;
     font-weight: 500;
     font-size: 19px;
+    margin-top: 120px;
     /* Margin bottom 30px more than footer height */
     margin-bottom: 60px;
 }
 
 /* Navbar style */
+
+.masthead {
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    width: 100%;
+}
 
 .navbar {
     background-image: url(../images/retina_wood/retina_wood.png);
@@ -65,14 +73,9 @@ body {
     border: 10px solid #4aaaa5;
 }
 
-.col-12,
-.col-md-4 {
-    padding: 0px;
-}
-
-.col-12 {
-    margin-left: 15px;
-    margin-right: 15px;
+.col-sm-6 {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 p {
@@ -85,29 +88,10 @@ p {
 
 /* Portfolio page style*/
 
-.picCol {
-    margin-bottom: 22px;
-}
-
-.picCol,
-.picbox,
-.boxImage {
-    width: 300px;
-    height: 150px;
-    position: relative;
-}
-
-.label {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    padding: 5px 0px 5px 0px;
-    background: #4aaaa5;
-    border-top: solid 2px grey;
-    border-bottom: solid 2px grey;
-    color: white;
-    text-align:center;
-}
+/* .col-12, */
+/* .col-sm-6 {
+    margin: 0px 15px 22px 15px;
+} */
 
 /* Contact page style */
 
@@ -162,6 +146,14 @@ footer {
         margin-left: auto;
         margin-right: auto;
         width: 50%;
+    }
+
+    .picCol {
+        width: 100%;
+    }
+
+    .emptyCol {
+        width: 0px;
     }
 }
 
