--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ body {
 .main-container {
     margin-top: 30px;
     background-image: url(../images/retina_wood/retina_wood.png);
+    border-radius: .75%;
     padding: 0px;
     border: 1px solid grey;
 }
