Updated background image and added header to 'Portfolio' page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    background: url(../images/diagonal_striped_brick/diagonal_striped_brick/diagonal_striped_brick.png);
+    background: url(../images/background.jpg);
     color: #655757;
     font-weight: 500;
     font-size: 19px;
